fix(HMSPROV-390): RSA fingerprint and migration
